file size limit added. added links to add claim, list all claims

--- a/WebApplication1/Views/Claims/Add.cshtml
+++ b/WebApplication1/Views/Claims/Add.cshtml
@@ -22,7 +22,7 @@
 
     <div class="mt-3">
         <label class="form-label">UPLOAD FILE</label>
-        <input type="file" id="myFile" name="filename">
+        <input type="file" id="file" name="filename">
     </div>
    
 
