fixed bug in add view, and added redirect feature after new claim

--- a/WebApplication1/Views/Claims/Add.cshtml
+++ b/WebApplication1/Views/Claims/Add.cshtml
@@ -29,12 +29,12 @@
 
     <div class="mt-3">
         <label class="form-label">Hours Worked</label>
-        <input name="hWorked" type="number" class="form-control" asp-for="HoursWorked" />
+        <input name="HoursWorked" type="number" class="form-control" asp-for="HoursWorked" />
     </div>
 
     <div class="mt-3">
         <label class="form-label">Hourly Rate</label>
-        <input name="hRate" type="number" class="form-control" asp-for="HourlyRate" />
+        <input name="HourlyRate" type="number" class="form-control" asp-for="HourlyRate" />
     </div>
 
     <div class="mt-3">
@@ -47,7 +47,7 @@
     </div>
     <div class="mt-3">
         <label class="form-label">Claim Status</label>
-        <input type="text" class="form-control" asp-for="ClaimStatus" value="Pending"/>
+        <input type="text" class="form-control" asp-for="ClaimStatus" value="Pending" readonly/>
 
     </div>
     <div class="mt-3">
