--- a/WebApplication1/Views/Claims/Add.cshtml
+++ b/WebApplication1/Views/Claims/Add.cshtml
@@ -83,7 +83,7 @@
     <form method="post">
         <div class="form-group">
             <label class="form-label">ID</label>
-            <input type="number" class="form-control" asp-for="Id" />
+            <input type="number" class="form-control" asp-for="Id" ReadOnly/>
         </div>
 
         <div class="form-group">
@@ -98,12 +98,12 @@
 
         <div class="form-group">
             <label class="form-label">Hours Worked</label>
-            <input name="hWorked" type="number" class="form-control" asp-for="HoursWorked" />
+            <input name="HoursWorked" type="number" class="form-control" asp-for="HoursWorked" />
         </div>
 
         <div class="form-group">
             <label class="form-label">Hourly Rate</label>
-            <input name="hRate" type="number" class="form-control" asp-for="HourlyRate" />
+            <input name="HourlyRate" type="number" class="form-control" asp-for="HourlyRate" />
         </div>
 
         <div class="form-group">
